<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/search_categories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/restaurant_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_restaurant_black_24dp"
                android:drawablePadding="4dp"
                android:drawableTint="#7E7421"
                android:gravity="center"
                android:text="@string/where_to_eat"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/search_cafe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_local_cafe_black_24dp"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/cafe"
                android:textColor="#000"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/hotel_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_hotel_whit_24dp"
                android:drawablePadding="4dp"
                android:drawableTint="#BE6964"
                android:gravity="center"
                android:text="@string/hotel"
                android:textColor="#000"
                android:textSize="20sp"

                />

            <TextView
                android:id="@+id/search_cinema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_local_movies_black_24dp"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/cinema"
                android:textColor="#000"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/atm_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_local_atm_black_24dp"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/atm"
                android:textColor="#000"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/shopping_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_shopping_basket_black_24dp"
                android:drawablePadding="4dp"
                android:drawableTint="#723683"
                android:gravity="center"
                android:text="@string/shopping"
                android:textColor="#000"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/groceries_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_local_grocery_store_black_24dp"
                android:drawablePadding="4dp"
                android:drawableTint="#64694A"
                android:gravity="center"
                android:text="@string/groceries"
                android:textColor="#000"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/hospitals_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_local_hospital_black_24dp"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/Hospitals"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/phrmacy_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_local_pharmacy_black_24dp"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/Pharmacy"
                android:textColor="#000"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/parking_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_local_parking_black_24dp"
                android:drawablePadding="4dp"
                android:drawableTint="#4C85B9"
                android:gravity="center"
                android:text="@string/parking"
                android:textColor="#000"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/gas_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_local_gas_station_black_24dp"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/Gas"
                android:textColor="#000"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@+id/atm_search" />


            <TextView
                android:id="@+id/search_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_school_black_24dp"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/school"
                android:textColor="#000"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/search_stadium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_golf_course_black_24dp"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/stadium"
                android:textColor="#000"
                android:textSize="20dp" />


        </LinearLayout>

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="17dp"
            android:background="@drawable/rounded_gray"
            android:padding="8dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView">


        </androidx.recyclerview.widget.RecyclerView>

        <!--
              <TextView
                  android:id="@+id/atm_search"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="16dp"
                  android:layout_marginTop="22dp"
                  android:drawableStart="@drawable/ic_local_atm_black_24dp"
                  android:drawablePadding="4dp"
                  android:gravity="center"
                  android:text="@string/atm"
                  android:textColor="#000"
                  android:textSize="20dp"
                 />
              <TextView
                  android:id="@+id/atm_search"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="16dp"
                  android:layout_marginTop="22dp"
                  android:drawableStart="@drawable/ic_local_atm_black_24dp"
                  android:drawablePadding="4dp"
                  android:gravity="center"
                  android:text="@string/atm"
                  android:textColor="#000"
                  android:textSize="20dp"
                 />
       -->
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>